# rin

./: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yaml  plot.py  state.db
dashboard/lidar/: index.html
dashboard/vm/: docker-compose.yaml  otel-collector-config.yaml
metrics_macros/: Cargo.toml
metrics_macros/src/: lib.rs
rin_macros/: Cargo.toml
rin_macros/src/: lib.rs
src/: args.rs  client_websocket.rs  liveliness.rs  main.rs  pub.rs  start_pub.rs  start_sub.rs  start_subpub.rs  start_video_pub.rs  start_video_sub.rs  sub.rs  subpub.rs  temp.rs  video_stream_pub.rs  video_stream_sub.rs  websocket.rs
src/msg/: mod.rs
src/msg/proto/: LidarData.proto  SimpleMessage.proto  mod.rs  report.proto
src/msg/single/: mod.rs
src/msg/stream/: mod.rs
src/node/: common.rs  mod.rs
