[package]
name = "rin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sp"
path = "src/start_pub.rs"

[[bin]]
name = "ssp"
path = "src/start_subpub.rs"

[[bin]]
name = "ss"
path = "src/start_sub.rs"

[[bin]]
name = "p"
path = "src/pub.rs"

[[bin]]
name = "s"
path = "src/sub.rs"

[[bin]]
name = "temp"
path = "src/temp.rs"


[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
# rand = "0.8.5"

zenoh = "1.0.2"

serde = "1.0.215"
serde_json = "1.0.133"

tokio = { version = "1.41.1", features = ["full"] }

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-opentelemetry = "0.19.0"

opentelemetry = { version = "0.19.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version="0.14.0",  features = ["default", "tonic", "metrics"] }
opentelemetry-semantic-conventions = { version="0.11.0" }

