[package]
name = "rin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sp"
path = "src/start_pub.rs"

[[bin]]
name = "ssp"
path = "src/start_subpub.rs"

[[bin]]
name = "ss"
path = "src/start_sub.rs"

[[bin]]
name = "p"
path = "src/pub.rs"

[[bin]]
name = "s"
path = "src/sub.rs"

[[bin]]
name = "live"
path = "src/liveliness.rs"

[[bin]]
name = "rin"
path = "src/main.rs"

[[bin]]
name = "temp"
path = "src/temp.rs"


[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
# rand = "0.8.5"

zenoh = "1.0.2"

serde = "1.0.215"
serde_json = "1.0.133"

tokio = { version = "1.41.1", features = ["full"] }

opentelemetry = { version = "0.27.1", features = ["metrics","logs"] }
opentelemetry-otlp = { version = "0.27.0", features = ["default","http-json","http-proto","metrics", "logs","tonic"], default-features = false }
opentelemetry-semantic-conventions = {version="0.27.0", features = ["semconv_experimental"]}
opentelemetry-stdout = { version = "0.27.0", features = ["logs","trace"] }
opentelemetry_sdk = { version = "0.27.1", features = ["logs", "rt-tokio","metrics"] }
opentelemetry-appender-tracing = "0.27.0"

tracing = {version="0.1.41", features=["std"]}
tracing-core = "0.1.33"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = {version="0.3.19", features=["env-filter","fmt","std", "registry"]}
rusqlite = { version = "0.32.1", features = ["bundled"] }
gstreamer = "0.23.4"

