[package]
name = "rin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sp"
path = "src/start_pub.rs"

[[bin]]
name = "ssp"
path = "src/start_subpub.rs"

[[bin]]
name = "ss"
path = "src/start_sub.rs"

[[bin]]
name = "p"
path = "src/pub.rs"

[[bin]]
name = "s"
path = "src/sub.rs"

[[bin]]
name = "live"
path = "src/liveliness.rs"

[[bin]]
name = "rin"
path = "src/main.rs"

[[bin]]
name = "vp"
path = "src/start_video_pub.rs"

[[bin]]
name = "vs"
path = "src/start_video_sub.rs"

[[bin]]
name = "ws"
path = "src/websocket.rs"

[[bin]]
name = "cwb"
path = "src/client_websocket.rs"

[[bin]]
name = "temp"
path = "src/temp.rs"


[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
# rand = "0.8.5"

zenoh = "1.1.1"

serde = "1.0.217"
serde_json = "1.0.137"

tokio = { version = "1.43.0", features = ["full"] }

opentelemetry = { version = "0.27.1", features = ["metrics","logs"] }
opentelemetry-otlp = { version = "0.27.0", features = ["default","http-json","http-proto","metrics", "logs","tonic"], default-features = false }
opentelemetry-semantic-conventions = {version="0.27.0", features = ["semconv_experimental"]}
opentelemetry-stdout = { version = "0.27.0", features = ["logs","trace"] }
opentelemetry_sdk = { version = "0.27.1", features = ["logs", "rt-tokio","metrics"] }
opentelemetry-appender-tracing = "0.27.0"

tracing = {version="0.1.41", features=["std"]}
tracing-core = "0.1.33"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = {version="0.3.19", features=["env-filter","fmt","std", "registry"]}
rusqlite = { version = "0.33.0", features = ["bundled"] }
gstreamer = "0.23.4"
axum = { version = "0.8.1", features = ["ws"] }
tokio-tungstenite = "0.26.1"
futures-util = "0.3.31"
futures = "0.3.31"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
headers = "0.4.0"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }

rin_macros = { path = "rin_macros" }
prost = "0.13.4"
prost-types = "0.13.4"

[build-dependencies]
prost-build = { version = "0.13.4" }
